[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/ConnectPad.gd" type="Script" id=1]
[ext_resource path="res://scripts/ConnectPadInput.gd" type="Script" id=2]
[ext_resource path="res://audio/menu_selection.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/TouchableViewport.gd" type="Script" id=4]
[ext_resource path="res://themes/vrworkout_theme.theme" type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.0185659, 0.198504, 0.300527 )

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 0.6, 0.4 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_unshaded = true
albedo_texture = SubResource( 3 )

[node name="ConnectPad" type="Spatial"]
transform = Transform( -1, 0, 3.25842e-07, 0, 1, 0, -3.25842e-07, 0, -1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 768, 512 )
transparent_bg = true
msaa = 6
render_target_v_flip = true
gui_disable_input = true
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="Viewport"]

[node name="ColorRect" type="Panel" parent="Viewport/CanvasLayer"]
margin_right = 768.0
margin_bottom = 512.0
custom_styles/panel = SubResource( 6 )

[node name="Button0_1" type="Button" parent="Viewport/CanvasLayer"]
margin_right = 92.0
margin_bottom = 92.0
focus_mode = 0
theme = ExtResource( 5 )
action_mode = 0
text = "[ 1 ]"
expand_icon = true

[node name="Button1_1" type="Button" parent="Viewport/CanvasLayer"]
margin_top = 128.0
margin_right = 92.0
margin_bottom = 220.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ 6 ]"
expand_icon = true

[node name="Button2_1" type="Button" parent="Viewport/CanvasLayer"]
margin_top = 256.0
margin_right = 92.0
margin_bottom = 348.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ G ]"
expand_icon = true

[node name="Button3_1" type="Button" parent="Viewport/CanvasLayer"]
margin_top = 384.0
margin_right = 92.0
margin_bottom = 476.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ R ]"
expand_icon = true

[node name="Button3_2" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 128.0
margin_top = 384.0
margin_right = 220.0
margin_bottom = 476.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ U ]"
expand_icon = true

[node name="Button3_3" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 256.0
margin_top = 384.0
margin_right = 348.0
margin_bottom = 476.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ W ]"
expand_icon = true

[node name="Button3_4" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 384.0
margin_top = 384.0
margin_right = 481.0
margin_bottom = 476.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ X ]"
expand_icon = true

[node name="Button2_2" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 128.0
margin_top = 256.0
margin_right = 220.0
margin_bottom = 348.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ I ]"
expand_icon = true

[node name="Button2_3" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 256.0
margin_top = 256.0
margin_right = 348.0
margin_bottom = 348.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ K ]"
expand_icon = true

[node name="Button2_4" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 384.0
margin_top = 256.0
margin_right = 476.0
margin_bottom = 348.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ L ]"
expand_icon = true

[node name="Button1_2" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 128.0
margin_top = 128.0
margin_right = 220.0
margin_bottom = 220.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ 7 ]"
expand_icon = true

[node name="Button1_3" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 256.0
margin_top = 128.0
margin_right = 348.0
margin_bottom = 220.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ 9 ]"
expand_icon = true

[node name="Button1_4" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 384.0
margin_top = 128.0
margin_right = 476.0
margin_bottom = 220.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ E ]"
expand_icon = true

[node name="Button0_2" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 128.0
margin_right = 220.0
margin_bottom = 92.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ 2 ]"
expand_icon = true

[node name="Button0_3" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 256.0
margin_right = 348.0
margin_bottom = 92.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ 3 ]"
expand_icon = true

[node name="Button0_4" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 384.0
margin_right = 476.0
margin_bottom = 92.0
theme = ExtResource( 5 )
action_mode = 0
text = "[ 4 ]"
expand_icon = true

[node name="Enter Room" type="Button" parent="Viewport/CanvasLayer"]
anchor_left = 0.699
anchor_top = 0.25
anchor_right = 0.812
anchor_bottom = 0.3
margin_right = 86.0001
margin_bottom = 38.4
theme = ExtResource( 5 )
action_mode = 0
text = "Enter Room"

[node name="Clear" type="Button" parent="Viewport/CanvasLayer"]
anchor_left = 0.699
anchor_top = 0.424
anchor_right = 0.812
anchor_bottom = 0.474
margin_right = 86.0001
margin_bottom = 38.4
theme = ExtResource( 5 )
action_mode = 0
text = "Clear"

[node name="CreateRoom" type="Button" parent="Viewport/CanvasLayer"]
anchor_left = 0.699
anchor_top = 0.587
anchor_right = 0.812
anchor_bottom = 0.649
margin_right = 89.4801
margin_bottom = 32.256
theme = ExtResource( 5 )
action_mode = 0
text = "Create Room"

[node name="ExitRoom" type="Button" parent="Viewport/CanvasLayer"]
anchor_left = 0.699
anchor_top = 0.762
anchor_right = 0.812
anchor_bottom = 0.812
margin_right = 86.0001
margin_bottom = 38.4
theme = ExtResource( 5 )
action_mode = 0
text = "Exit Room"

[node name="RoomNumberLabel" type="RichTextLabel" parent="Viewport/CanvasLayer"]
anchor_left = 0.637
anchor_top = 0.013
anchor_right = 0.862
anchor_bottom = 0.1
margin_right = 102.0
margin_bottom = 14.0
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "MULTIPLAYER
ROOM NUMBER"
text = "MULTIPLAYER
ROOM NUMBER"

[node name="Code" type="Label" parent="Viewport/CanvasLayer"]
anchor_left = 0.637
anchor_top = 0.138
anchor_right = 0.637
anchor_bottom = 0.138
margin_right = 260.0
margin_bottom = 40.0
theme = ExtResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Mark" type="ColorRect" parent="Viewport/CanvasLayer"]
margin_right = 4.0
margin_bottom = 4.0

[node name="ConnectPadInput" type="StaticBody" parent="."]
transform = Transform( -1, 0, -3.25842e-07, 0, 1, 0, 3.25842e-07, 0, -1, 0, 0, 0 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="ConnectPadInput"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0210521, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="ConnectPadInput"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="button_down" from="Viewport/CanvasLayer/Button0_1" to="." method="_on_Button_button_down" binds= [ "1" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button1_1" to="." method="_on_Button_button_down" binds= [ "6" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button2_1" to="." method="_on_Button_button_down" binds= [ "G" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button3_1" to="." method="_on_Button_button_down" binds= [ "R" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button3_2" to="." method="_on_Button_button_down" binds= [ "U" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button3_3" to="." method="_on_Button_button_down" binds= [ "W" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button3_4" to="." method="_on_Button_button_down" binds= [ "X" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button2_2" to="." method="_on_Button_button_down" binds= [ "I" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button2_3" to="." method="_on_Button_button_down" binds= [ "K" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button2_4" to="." method="_on_Button_button_down" binds= [ "L" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button1_2" to="." method="_on_Button_button_down" binds= [ "7" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button1_3" to="." method="_on_Button_button_down" binds= [ "9" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button1_4" to="." method="_on_Button_button_down" binds= [ "E" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button0_2" to="." method="_on_Button_button_down" binds= [ "2" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button0_3" to="." method="_on_Button_button_down" binds= [ "3" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Button0_4" to="." method="_on_Button_button_down" binds= [ "4" ]]
[connection signal="button_down" from="Viewport/CanvasLayer/Enter Room" to="." method="_on_Enter_Room_pressed"]
[connection signal="button_down" from="Viewport/CanvasLayer/Clear" to="." method="_on_Clear_button_down"]
[connection signal="button_down" from="Viewport/CanvasLayer/CreateRoom" to="." method="_on_CreateRoom_button_down"]
[connection signal="button_down" from="Viewport/CanvasLayer/ExitRoom" to="." method="_on_ExitRoom_button_down"]
[connection signal="interface_release" from="ConnectPadInput" to="Viewport" method="_on_ConnectPadInput_interface_release"]
[connection signal="interface_touch" from="ConnectPadInput" to="Viewport" method="_on_ConnectPadInput_interface_touch"]
